--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,9 @@ archives_base_name=omnicrossbow
 
 # Dependencies
 fabric_version=0.92.2+1.20.1
+# Enchancement
+enchancement_version=1.20-26
+cca_version=5.2.2
+midnightlib_version=1.4.1-fabric
+tooltipfix_version=1.1.1-1.20
+step_version=25dabcdad7
