--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,21 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
+	maven {
+		name "Ladysnake Maven"
+		url "https://maven.ladysnake.org/releases"
+	}
 }
 
 loom {
@@ -39,7 +54,15 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	// Enchancement Compat
+	modImplementation "maven.modrinth:enchancement:${project.enchancement_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}"
+	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
+	modImplementation "com.github.emilyploszaj:step-height-entity-attribute:${project.step_version}"
+	modImplementation "maven.modrinth:tooltipfix:${project.tooltipfix_version}"
 }
 
 processResources {
