--- a/build.gradle
+++ b/build.gradle
@@ -56,13 +56,13 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Enchancement Compat
-	modImplementation "maven.modrinth:enchancement:${project.enchancement_version}"
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}"
-	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
-	modImplementation "com.github.emilyploszaj:step-height-entity-attribute:${project.step_version}"
-	modImplementation "maven.modrinth:tooltipfix:${project.tooltipfix_version}"
+	modCompileOnly "maven.modrinth:enchancement:${project.enchancement_version}"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}"
+	modCompileOnly "maven.modrinth:midnightlib:${project.midnightlib_version}"
+	modCompileOnly "com.github.emilyploszaj:step-height-entity-attribute:${project.step_version}"
+	modCompileOnly "maven.modrinth:tooltipfix:${project.tooltipfix_version}"
 }
 
 processResources {
