Rework custom ammo rendering
Fixes crash with other mods registering a builtin crossbow renderer

--- a/src/main/resources/data/omnicrossbow/tags/item/non_omni_projectile.json
+++ b/src/main/resources/data/omnicrossbow/tags/item/non_omni_projectile.json
@@ -1,5 +1,6 @@
 {
   "values": [
-    {"required": false, "id": "yungscavebiomes:icicle"}
+    {"required": false, "id": "yungscavebiomes:icicle"},
+    {"required": false, "id": "pierced:harpoon"}
   ]
 }
